# web-to-app

./: CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/webtoapp/core/ai/: AiConfigManager.kt
app/src/main/java/com/webtoapp/core/ai/coding/: AiCodingAgent.kt  AiCodingStorage.kt  AiCodingToolSystem.kt
app/src/main/java/com/webtoapp/core/ai/provider/: AiResponseParser.kt
app/src/main/java/com/webtoapp/core/apkbuilder/: ApkBuilder.kt  ApkTemplate.kt
app/src/main/java/com/webtoapp/core/bgm/: OnlineMusicDownloader.kt
app/src/main/java/com/webtoapp/core/extension/panel/: PanelScripts.kt
app/src/main/java/com/webtoapp/core/extension/snippets/: SnippetModels.kt
app/src/main/java/com/webtoapp/core/i18n/: Strings.kt
app/src/main/java/com/webtoapp/core/shell/: ShellModeManager.kt
app/src/main/java/com/webtoapp/core/webview/: NativeBridge.kt  WebViewManager.kt
app/src/main/java/com/webtoapp/core/webview/compat/: WebViewBridgePolyfillScriptProvider.kt  WebViewCompatibilityScriptCoordinator.kt  WebViewInteractionScriptProvider.kt  WebViewMiscCompatibilityScriptProvider.kt  WebViewPolyfillScriptProvider.kt  WebViewShieldScriptAppender.kt  WebViewZoomPolyfillScriptProvider.kt
app/src/main/java/com/webtoapp/core/webview/config/: WebViewSetupCoordinator.kt
app/src/main/java/com/webtoapp/core/webview/lifecycle/: WebViewPageLifecycleHandler.kt
app/src/main/java/com/webtoapp/core/webview/navigation/: WebViewNavigationHandler.kt
app/src/main/java/com/webtoapp/core/webview/session/: WebViewManagerRuntimeState.kt  WebViewSessionState.kt
app/src/main/java/com/webtoapp/data/model/: WebAppConfigAliases.kt
app/src/main/java/com/webtoapp/data/model/webapp/config/: AppearanceAndBehaviorConfigs.kt  ExportConfigs.kt  MediaConfigs.kt
app/src/main/java/com/webtoapp/ui/components/: EncryptionConfigCard.kt  HardeningConfigCard.kt
app/src/main/java/com/webtoapp/ui/components/forcedrun/: ForcedRunPermissionComponents.kt
app/src/main/java/com/webtoapp/ui/data/model/: WebApp.kt
app/src/main/java/com/webtoapp/ui/i18n/: InitializeLanguage.kt
app/src/main/java/com/webtoapp/ui/navigation/: AiExportCoordinator.kt  AppAccountNavigation.kt  AppCommunityNavigation.kt  AppCreationNavigation.kt  AppNavigation.kt  AppNavigationDependenciesProvider.kt  AppNavigationGraph.kt  AppNavigationGraphDependencies.kt  AppNavigationScaffold.kt  AppNavigationTabContent.kt  AppPreviewNavigation.kt  AppToolNavigation.kt  CreateHtmlRouteArgs.kt  PreviewStarter.kt
app/src/main/java/com/webtoapp/ui/screens/: BrowserKernelScreen.kt  CreateAppScreen.kt  CreateAppWebViewCards.kt  ExtensionModuleScreen.kt  HomeScreen.kt  LinuxEnvironmentScreen.kt  StatsScreen.kt  TeamScreen.kt
app/src/main/java/com/webtoapp/ui/screens/aimodule/: AiModuleDeveloperScreen.kt
app/src/main/java/com/webtoapp/ui/screens/community/: CommunityPostCard.kt  CommunityScreen.kt  CommunitySearchSheets.kt  CommunitySectionCards.kt  NotificationsScreen.kt  PostDetailScreen.kt
app/src/main/java/com/webtoapp/ui/screens/create/webview/cards/system/: AdBlockCard.kt  ErrorPageConfigCard.kt  FullscreenModeCard.kt  KeepScreenOnCard.kt  KeyboardAdjustModeCard.kt  LandscapeModeCard.kt  LongPressMenuCard.kt  StatusBarStyleCard.kt  SystemCardCommon.kt  UserAgentCard.kt  WebViewConfigCard.kt
app/src/main/java/com/webtoapp/ui/screens/extensionmodule/: ExtensionModuleCard.kt  ExtensionModuleSourceBrowser.kt  ExtensionModuleTabs.kt
app/src/main/java/com/webtoapp/ui/shell/: ShellActivity.kt  ShellDialogs.kt  ShellScaffoldLayout.kt  ShellScreen.kt  ShellWebViewConfig.kt
app/src/main/java/com/webtoapp/ui/theme/: Theme.kt
app/src/main/java/com/webtoapp/ui/viewmodel/main/: StateFactory.kt
app/src/main/java/com/webtoapp/ui/webview/: WebAppPreviewCoordinator.kt  WebViewActivity.kt  WebViewDownloadBridge.kt  WebViewScreenDependencies.kt  WebViewStrictHostFallback.kt
app/src/main/java/com/webtoapp/ui/webview/screen/: WebViewScreen.kt
app/src/test/java/com/webtoapp/core/webview/intercept/: RequestInterceptionCoordinatorTest.kt  ResourceFallbackLoaderTest.kt
app/src/test/java/com/webtoapp/core/webview/navigation/: WebViewNavigationHandlerTest.kt
app/src/test/java/com/webtoapp/core/webview/session/: WebViewManagerRuntimeStateTest.kt
app/src/test/java/com/webtoapp/data/model/: WebAppModelTest.kt
